# unfoldings

./: README.md  cabal.project  shell.nix
examples/: Main.hs  examples.cabal
plugin/: TestPlugin.hs  gibbon-plugin.cabal  test-plugin.cabal
plugin/src/Gibbon/: Plugin.hs
test-lib/: TestLib.hs  test-lib.cabal
