cabal-version:       >=1.10

name:                examples
version:             0.1.0.0
build-type:          Simple

executable gibbon-examples
  main-is:             Main.hs
  build-depends:       base == 4.15.*
                     , test-plugin
                     , test-lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
                       -fplugin=TestPlugin
                       -- -dcore-lint
                       -- -O2
                       -- -rtsopts "-with-rtsopts=-T"
                       -- "-with-rtsopts=-s"
                       -- -ddump-simpl -dsuppress-all -ddump-to-file
